# lizhi

./: .gitignore  database_schema.sql  index.html  package-lock.json  package.json
backend/: app.py  requirements.txt
backend/models/: database_models.py
backend/routes/: comment_routes.py  farmer_routes.py  like_routes.py  production_area_routes.py  variety_routes.py
src/: App.vue  main.js
src/components/: CommentsSection.vue  FarmerCard.vue  LikeButton.vue  ProductionMap.vue
src/router/: index.js
src/services/: apiService.js
src/views/: Brands.vue  Home.vue  LycheeDetail.vue  LycheeVarieties.vue  Map.vue  Media.vue  Varieties.vue
src/views/cart/: index.vue
src/views/home/: index.vue
src/views/login/: index.vue
src/views/register/: index.vue
src/views/store/: index.vue
src/views/xiangqing/: index.vue
src/views/zujian/: carousel.vue  hot.vue  jiaoyibang.vue  nav.vue  product.vue  recommend.vue  shop.vue
vue_flask_01/: app.py  pyproject.toml
vue_flask_01/etx/: auth.py  cart.py  home.py  product.py
vue_flask_01/static/css/: title.css
